--- a/app/assets/stylesheets/config/_mixin.scss
+++ b/app/assets/stylesheets/config/_mixin.scss
@@ -71,9 +71,9 @@
 }
 @mixin s-h4{
   font-family: 'Roboto','Noto Sans JP';
-  font-weight: 300;
+  font-weight: 100;
   font-size: 8px;
-  letter-spacing: 1px;
+  letter-spacing: 0px;
   color: $black;
 }
 @mixin s-p {
@@ -85,7 +85,8 @@
 }
 @mixin s-cc{
   font-family: 'hare';
-  font-size: 20px;
+  font-weight: bold;
+  font-size: 13px;
   letter-spacing: 2px;
   color: $black;
 }
