--- a/app/assets/stylesheets/modules/contents/_show.scss
+++ b/app/assets/stylesheets/modules/contents/_show.scss
@@ -225,7 +225,8 @@
           text-align: center;
           position: static;
           transform: translate(0,0);
-          width: 90%;
+          margin: 0 auto;
+          width: 80%;
         }
         h2,p{
           display: none;
